added option to run more than one warm-up iteration per candidate decision variable